Fix footer wrapping in Alert for Android

--- a/src/components/Alert/Alert.css
+++ b/src/components/Alert/Alert.css
@@ -205,6 +205,7 @@
     padding: 8px;
     display: flex;
     justify-content: flex-end;
+    flex-flow: wrap;
     }
 
     .Alert--android .Alert__btn {
